fixed the markdown and also the ticket spacing

--- a/frontend/src/app/my-courses/course/tickets/group/group.component.css
+++ b/frontend/src/app/my-courses/course/tickets/group/group.component.css
@@ -1,7 +1,7 @@
  .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr); 
-    gap: 20px; 
+    gap: 5px; 
     padding-left: 10px; 
     padding-right: 10px;
     margin: 2rem .3rem 0 .3rem;
